--- a/estilo.css
+++ b/estilo.css
@@ -2,51 +2,110 @@
     margin: 0;
     padding: 0;
 }
-
-body{
-    background: url(londrina.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.chuva{
+.geral {
     height: 100vh;
-    background: url(chuva.png);
-    animation: chover .5s linear infinite;
-}
-
-@keyframes chover{
-    0%{
-        background-position: 0% 0%;
-    }
-    100%{
-        background-position: 20% 100%;
-    }
-}
-
-.chuva::before{
-    content: '';
-    position: absolute;
     width: 100%;
-    height: 100%;
-    background: #fff;
-    animation: raio 5s linear infinite;
-    opacity: 0;
+    background-image: url(ceu.jpg);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow-x: hidden; 
+}
+.texto {
+    width: 200px;
+    height: 100px;
+    display: block;
+    position: absolute;
+    top: 100px;
+    left: 30%;
+    z-index: 2;
+    color: red;
+    font-size: 30px;
+}
+.estrada {
+    height: 200px;
+    width: 500%;
+    display: block;
+    background-image: url(estrada.jpg);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    animation: movimento 5s linear infinite;
+}
+@keyframes movimento {
+    100% {
+        transform: translateX(-3400px);
+    }
+}
+.cidade {
+    height: 250px;
+    width: 500%;
+    display: block;
+    background-image: url(cidade.png);
+    position: absolute;
+    bottom: 200px;
+    left: 0;
+    right: 0;
+    display: block;
+    z-index: 1;
+    background-repeat: repeat-x;
+    animation: cidade 20s linear infinite;
+}
+@keyframes cidade {
+    100% {
+        transform: translateX(-1400px);
+    }
+}
+.carro {
+    width: 400px;
+    left: 50%;
+    bottom: 100px;
+    transform: translateX(-50%);
+    position: absolute;
+    z-index: 2;
 }
 
-@keyframes raio{
-    0%{ opacity: 0; }
-    10%{ opacity: 0; }
-    11%{ opacity: 0,5; }
-    14%{ opacity: 0; }
-    21%{ opacity: 0,5; }
-    24%{ opacity: 0; }
-    30%{ opacity: 0; }
-    50%{ opacity: 0; }
-    55%{ opacity: 1; }
-    57%{ opacity: 0,5; }
-    65%{ opacity: 0; }
-    70%{ opacity: 0; }
-    80%{ opacity: 0,5; }
-    100%{ opacity: 0; }
+.carro img {
+    width: 100%;
+    animation: carro 1s linear infinite;
+}
+
+@keyframes carro {
+    100% {
+        transform: translateY(-2px);
+    }
+    50%{
+        transform: translateY(2px); 
+    }
+    0%{
+        transform: translateY(-2px);
+    }
+}
+.roda{
+    left: 50%;
+    bottom: 178px;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 2;
+}
+.roda img {
+    width: 72px;
+    height: 72px;
+    animation: roda 1.5s linear infinite;
+}
+.roda-traseira {
+    left: -165px;
+    position: absolute;
+}
+.roda-dianteira {
+    left: 80px;
+    position: absolute;
+}
+
+@keyframes roda {
+    100% {
+        transform: rotate(360deg);
+    }
 }
